exports[`Viewer component should be displayed correctly with the img src computed from photoId using the store and the connected component (current photo is the first of the list) 1`] = `
<withRouter(Viewer)
  currentPhoto={
    Object {
      "_id": "33dda00f0eec15bc3b3c59a615001ac1",
    }
  }
  dispatch={[Function]}
  nextID="33dda00f0eec15bc3b3c59a615001ac2"
  params={
    Object {
      "photoId": "33dda00f0eec15bc3b3c59a615001ac1",
    }
  }
  previousID="33dda00f0eec15bc3b3c59a615001ad3"
  router={
    Object {
      "location": Object {
        "pathname": "/photos/33dda00f0eec15bc3b3c59a615001ac8",
      },
      "push": [Function],
      "routes": Array [
        Object {
          "path": "/",
        },
        Object {
          "path": "photos",
        },
      ],
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Viewer component should be displayed correctly with the img src computed from photoId using the store and the connected component (current photo is the last of the list) 1`] = `
<withRouter(Viewer)
  currentPhoto={
    Object {
      "_id": "33dda00f0eec15bc3b3c59a615001ad3",
    }
  }
  dispatch={[Function]}
  nextID="33dda00f0eec15bc3b3c59a615001ac1"
  params={
    Object {
      "photoId": "33dda00f0eec15bc3b3c59a615001ad3",
    }
  }
  previousID="33dda00f0eec15bc3b3c59a615001ac2"
  router={
    Object {
      "location": Object {
        "pathname": "/photos/33dda00f0eec15bc3b3c59a615001ac8",
      },
      "push": [Function],
      "routes": Array [
        Object {
          "path": "/",
        },
        Object {
          "path": "photos",
        },
      ],
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Viewer component should be displayed correctly with the img src computed from photoId using the store and the connected component (current photo is the middle of the list) 1`] = `
<withRouter(Viewer)
  currentPhoto={
    Object {
      "_id": "33dda00f0eec15bc3b3c59a615001ac2",
    }
  }
  dispatch={[Function]}
  nextID="33dda00f0eec15bc3b3c59a615001ad3"
  params={
    Object {
      "photoId": "33dda00f0eec15bc3b3c59a615001ac2",
    }
  }
  previousID="33dda00f0eec15bc3b3c59a615001ac1"
  router={
    Object {
      "location": Object {
        "pathname": "/photos/33dda00f0eec15bc3b3c59a615001ac8",
      },
      "push": [Function],
      "routes": Array [
        Object {
          "path": "/",
        },
        Object {
          "path": "photos",
        },
      ],
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Viewer component should be displayed correctly with the img src computed from photoId using the store and the connected component for photos from an album 1`] = `
<withRouter(Viewer)
  currentPhoto={
    Object {
      "_id": "33dda00f0eec15bc3b3c59a615001AL1",
    }
  }
  dispatch={[Function]}
  nextID="33dda00f0eec15bc3b3c59a615001AL2"
  params={
    Object {
      "albumId": "33dda00f0eec15bc3b3c59a615001ac8",
      "photoId": "33dda00f0eec15bc3b3c59a615001AL1",
    }
  }
  previousID="33dda00f0eec15bc3b3c59a615001AL3"
  router={
    Object {
      "location": Object {
        "pathname": "/albums/33dda00f0eec15bc3b3c59a615001ac8/33dda00f0eec15bc3b3c59a615001ad0",
      },
      "push": [Function],
      "routes": Array [
        Object {
          "path": "/",
        },
        Object {
          "path": "albums",
        },
      ],
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Viewer component should handle correctly onClick events for next pictures 1`] = `
<div
  className="pho-viewer-wrapper"
  role="viewer">
  <_translate />
  <div
    className="pho-viewer-content">
    <a
      className="pho-viewer-nav-previous"
      onClick={[Function]}
      role="button" />
    <div
      className="pho-viewer-photo">
      <_translate
        noMargin={true} />
    </div>
    <a
      className="pho-viewer-nav-next"
      onClick={[Function]}
      role="button" />
  </div>
</div>
`;

exports[`Viewer component should handle correctly onClick events for previous pictures 1`] = `
<div
  className="pho-viewer-wrapper"
  role="viewer">
  <_translate />
  <div
    className="pho-viewer-content">
    <a
      className="pho-viewer-nav-previous"
      onClick={[Function]}
      role="button" />
    <div
      className="pho-viewer-photo">
      <_translate
        noMargin={true} />
    </div>
    <a
      className="pho-viewer-nav-next"
      onClick={[Function]}
      role="button" />
  </div>
</div>
`;
